Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,7 +62,8 @@
    ],
    "source": [
     "#Your code here\n",
-    "P_b\n",
+    "P_blemish_given_cancer = 1\n",
+    "P_\n",
     "bayes()"
    ]
   },
