Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -63,7 +63,7 @@
    "source": [
     "#Your code here\n",
     "P_blemish_given_cancer = 1\n",
-    "P_\n",
+    "P_blemish\n",
     "bayes()"
    ]
   },
