Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -63,7 +63,8 @@
    "source": [
     "#Your code here\n",
     "P_blemish_given_cancer = 1\n",
-    "P_blemish\n",
+    "P_blemish_given_no_cancer = .2\n",
+    "\n",
     "bayes()"
    ]
   },
