Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -64,6 +64,7 @@
     "#Your code here\n",
     "P_blemish_given_cancer = 1\n",
     "P_blemish_given_no_cancer = .2\n",
+    "P_cancer = .2\n",
     "\n",
     "bayes()"
    ]
