--- a/index.ipynb
+++ b/index.ipynb
@@ -65,7 +65,7 @@
     "P_blemish_given_cancer = 1\n",
     "P_blemish_given_no_cancer = .2\n",
     "P_cancer = .2\n",
-    "\n",
+    "P_blemish = \n",
     "bayes()"
    ]
   },
