Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -53,11 +53,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.46875\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.5555555555555555"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -66,7 +69,7 @@
     "P_blemish_given_no_cancer = .2\n",
     "P_cancer = .2\n",
     "P_blemish = P_blemish_given_cancer*P_cancer + P_blemish_given_no_cancer*(1-P_cancer)\n",
-    "bayes(P_cancer, P_blemish, P_blemish)"
+    "bayes(P_cancer, P_blemish, P_blemish_given_cancer)"
    ]
   },
   {
