Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -69,7 +69,7 @@
     "P_blemish_given_no_cancer = .2\n",
     "P_cancer = .2\n",
     "P_blemish = P_blemish_given_cancer*P_cancer + P_blemish_given_no_cancer*(1-P_cancer)\n",
-    "bayes(P_cancer, P_blemish, P_blemish_given_cancer)"
+    "bayes(P_cancer, P_blemish, P_blemish_given_cancer)\n"
    ]
   },
   {
