--- a/index.ipynb
+++ b/index.ipynb
@@ -49,18 +49,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.5555555555555555"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'p_blemish' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-7e4b889ec0e8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mP_blemish\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mP_blemish_given_cancer\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mP_cancer\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mP_blemish_given_no_cancer\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mP_cancer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mbayes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mP_cancer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mP_blemish\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mP_blemish_given_cancer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mp_blemish\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'p_blemish' is not defined"
+     ]
     }
    ],
    "source": [
@@ -69,7 +70,8 @@
     "P_blemish_given_no_cancer = .2\n",
     "P_cancer = .2\n",
     "P_blemish = P_blemish_given_cancer*P_cancer + P_blemish_given_no_cancer*(1-P_cancer)\n",
-    "bayes(P_cancer, P_blemish, P_blemish_given_cancer)\n"
+    "bayes(P_cancer, P_blemish, P_blemish_given_cancer)\n",
+    "p_blemish"
    ]
   },
   {
