Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.36000000000000004"
+       "0.46875"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,10 +67,9 @@
     "#Your code here\n",
     "P_blemish_given_cancer = 1\n",
     "P_blemish_given_no_cancer = .2\n",
-    "P_cancer = .2\n",
+    "P_cancer = .15\n",
     "P_blemish = P_blemish_given_cancer*P_cancer + P_blemish_given_no_cancer*(1-P_cancer)\n",
-    "bayes(P_cancer, P_blemish, P_blemish_given_cancer)\n",
-    "P_blemish"
+    "bayes(P_cancer, P_blemish, P_blemish_given_cancer)\n"
    ]
   },
   {
