Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -98,7 +98,7 @@
     }
    ],
    "source": [
-    "# Your solution P(2boys|older child is a boy)"
+    "# Your solution P(2boys|older child is a boy)\n"
    ]
   },
   {
