--- a/index.ipynb
+++ b/index.ipynb
@@ -98,7 +98,8 @@
     }
    ],
    "source": [
-    "# Your solution P(2boys|older child is a boy)\n"
+    "# Your solution P(2boys|older child is a boy)\n",
+    "bayes()"
    ]
   },
   {
