Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -83,23 +83,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5"
+       "0.25"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your solution P(2boys|older child is a boy)\n",
-    "bayes(.5,1)"
+    "bayes(.5,1,.5)"
    ]
   },
   {
