Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -99,7 +99,7 @@
    ],
    "source": [
     "# Your solution P(2boys|older child is a boy)\n",
-    "bayes(.25,1,1)"
+    "bayes(1,,1)"
    ]
   },
   {
