Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -83,23 +83,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.25"
+       "2.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your solution P(2boys|older child is a boy)\n",
-    "bayes(1,,1)"
+    "bayes(.25,.25,.5)"
    ]
   },
   {
