Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -83,23 +83,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.0"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your solution P(2boys|older child is a boy)\n",
-    "bayes(.25,.25,.5)"
+    "bayes(.25,.5,1)"
    ]
   },
   {
