Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -83,9 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your solution P(2boys|older child is a boy)\n",
     "bayes(.25,.5,1)"
@@ -117,7 +128,7 @@
     }
    ],
    "source": [
-    "# Your solution P(2boys|1 of 2 children is a boy)"
+    "# Your solution P(2boys|1 of 2 children is a boy)\n"
    ]
   },
   {
