--- a/index.ipynb
+++ b/index.ipynb
@@ -128,7 +128,8 @@
     }
    ],
    "source": [
-    "# Your solution P(2boys|1 of 2 children is a boy)\n"
+    "# Your solution P(2boys|1 of 2 children is a boy)\n",
+    "bayes(.25,.75)"
    ]
   },
   {
