Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -166,7 +166,8 @@
     }
    ],
    "source": [
-    "# Your solution P(Disease | positive test)"
+    "# Your solution P(Disease | positive test)\n",
+    "bayes(.99)"
    ]
   },
   {
