Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -151,23 +151,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.01"
+       "98.00999999999999"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your solution P(Disease | positive test)\n",
-    "bayes(.99,,.01)"
+    "bayes()"
    ]
   },
   {
