Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -167,7 +167,7 @@
    ],
    "source": [
     "# Your solution P(Disease | positive test)\n",
-    "bayes()"
+    "bayes(.01,(,99*.02))"
    ]
   },
   {
