--- a/index.ipynb
+++ b/index.ipynb
@@ -151,23 +151,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "98.00999999999999"
+       "0.5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your solution P(Disease | positive test)\n",
-    "bayes(.01,(,99*.02))"
+    "bayes(.01,(.99*.02),.99)"
    ]
   },
   {
